# smart-env

./: .envrc  ChangeLog  README.rst  pyproject.toml
tests/: test_load_env.py  test_wrapper.py
