[tool.poetry]
name = "smart-env"
version = "0.1.0"
description = ""
authors = ["David Nugent <davidn@uniquode.io>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-env = "*"
pytest-pythonpath = "*"

[tool.pytest.ini-options]
minversion = "6.0"
python_paths = [
    "smart_env"
]
testpaths = [
    "tests"
]
env = [
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
